@@ -42,7 +42,7 @@ which contains two chapters dealing with HttpUnit.</blockquote>
 <h2>Where do I get releases?</h2>
 <blockquote>Releases of HttpUnit are available
 from <a href="http://sourceforge.net/project/showfiles.php?group_id=6550"> the project download page.</a>
-<br>Other builds are available from <a href="http://httpunit.sourceforge.net/prerelease">the pre-release directory</a>.
+<br>Other builds are available from <a href="http://www.httpunit.org/prerelease">the pre-release directory</a>.
 </blockquote>
 
 <h2>How do I get help, contribute, give feedback, fix bugs and so on?</h2>
